added div style for the three-tier image

--- a/styles/git-stylesheet.css
+++ b/styles/git-stylesheet.css
@@ -2,3 +2,8 @@ h4 {
   background-color: #00ff00;
   display: inline-block;
 }
+div {
+    width: 500px;
+    height: 500px;
+    border: 3px solid #8AC007;
+}
