--- a/styles/git-stylesheet.css
+++ b/styles/git-stylesheet.css
@@ -2,8 +2,28 @@ h4 {
   background-color: #00ff00;
   display: inline-block;
 }
-div {
-    width: 500px;
-    height: 500px;
-    border: 3px solid #8AC007;
+
+div.image_container {
+    background-color: #999;
+    width: 800px;
+    height: 430px;
+    display: inline-block;
+    overflow: hidden;
 }
+
+div.image_container1 {
+    background-color: #999;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    overflow: hidden;
+}
+
+div.image_container img {
+    width: 100%;
+}
+
+div.image_container1 img {
+    width: 100%;
+}
+
